Fix title section

--- a/_posts/2020-09-05-post01.md
+++ b/_posts/2020-09-05-post01.md
@@ -9,9 +9,9 @@ tags: programmers, Algorithm_level_1, JavaScript, Coding
 
    - 코딩테스트 연습 레벨 1
    - 문제설명
-     ![완주](programmers_algorithm_01)
+     ![완주](./imgs/programmers_algorithm_02.png)
    - 입출력 예
-     ![입출력](programmers_algorithm_02)
+     ![입출력](./imgs/programmers_algorithm_02.png)
 
 2. 동명이인의 경우를 생각 못하고선 생각한 방법.
    - 필터를 넣어서 둘의 차이를 비교해 보자.
