--- a/_posts/2020-09-17-post02.md
+++ b/_posts/2020-09-17-post02.md
@@ -1,11 +1,12 @@
-
 ---
 title: "Markdown practice"
 date: 2020-09-17 12:30:00 +0900
 categories: Github
 tags: Github, Blog, Markdown, Practice
 ---
+
 # Markdown practice
+
 ## Headers
 
 - Putting number signs \# in front will make `<h1~6>`
@@ -13,6 +14,7 @@ tags: Github, Blog, Markdown, Practice
 - 6 of \# will be` <h6>`
 
 ## Emphasis
+
 - Any word wrapped in underscore(\_)
 - _Will be italic_
 - Any word wrapped in doubleunderscore(\*\*)
@@ -39,19 +41,23 @@ tags: Github, Blog, Markdown, Practice
    2. Item 3b
 
 ## Images
-![Github Logo](github_PNG20.png)
+
+![Github Logo](./imgs/github_PNG20.png)
 
 ## Links
+
 - [GitHub](https://github.com)
 - https://github.com
 
 ## Blockquotes
+
 As Kanye West said:
 
 > We're living the future so
 > the present is our past.
 
 ## Inline code
+
 - I think you should use an
 - `<addr>` element here instead
 
@@ -74,11 +80,12 @@ function fancyAlert(arg) {
 
 ## Tables
 
-First Header | Second Header
------------- | -------------
-Content from cell 1 | Content from cell 2
-Content in the first column | Content in the second column
-Content in the first column | Content in the second column
+| First Header                | Second Header                |
+| --------------------------- | ---------------------------- |
+| Content from cell 1         | Content from cell 2          |
+| Content in the first column | Content in the second column |
+| Content in the first column | Content in the second column |
 
 ## Strikethrough
+
 - Any word wrapped with two tildes\~\~ will appear crossed out ~~like this~~.
