--- a/_posts/2020-09-05-post01.md
+++ b/_posts/2020-09-05-post01.md
@@ -2,7 +2,7 @@
 title: "Algorithm training - 완주하지 못한 선수"
 date: 2020-09-05 12:30:00 +0900
 categories: Algorithm
-tags: programmers, Algorithm_level_1, JavaScript, Coding
+tags: Programmers, Algorithm_level_1, JavaScript, Coding, Practice
 ---
 
 1. 문제
