--- a/_posts/2020-09-05-post01.md
+++ b/_posts/2020-09-05-post01.md
@@ -5,16 +5,16 @@ categories: Algorithm
 tags: Programmers, Algorithm_level_1, JavaScript, Coding, Practice
 ---
 
-1. 문제
+1. Algorithm
 
-   - 코딩테스트 연습 레벨 1
-   - 문제설명
+   - programmers.co.kr coding test practice level 1
+   - Logic
      ![완주](./imgs/programmers_algorithm_02.png)
-   - 입출력 예
+   - Given input and expected output
      ![입출력](./imgs/programmers_algorithm_02.png)
 
-2. 동명이인의 경우를 생각 못하고선 생각한 방법.
-   - 필터를 넣어서 둘의 차이를 비교해 보자.
+2. The first solution I came up with, but I didn't consider cases of people with same name.
+   - Add filter to compare the two lists
 
 ```
 function solution(participant, completion) {
@@ -23,13 +23,12 @@ function solution(participant, completion) {
 }
 ```
 
-- 입출력 1,2번은 통과하였으나 3번의 동명이인에서 문제가 발생해서 다시 생각해 봤다.
+- It passed input 1 and 2 but issue was found on case number 3 that contains people with same name.
 
-3. 재시도
-   - 두 어레이를 각각 정렬해서 비교하면 쉽게 찾아낼 수 있지 않을까?
-   - 아니면 하나씩 값을 삭제해 가며 두 어레이를 비교해 볼까?
-   - 정렬하는 방법이 복잡하고 오래걸릴 것 같다고 착각하고 결정했다.
-   - 두번째 어레이 값을 하나씩 삭제해 가면서 동시에 같은 값을 첫번째 어레이에서 삭제해 나가자.
+3. Second attempt
+   - Would I be able to compare the two list easier if I sort the lists?
+   - Or should I compare them while I delete matched items from both lists?
+   - I assumed that sorting might be complicated and decided to go with deleting items.
 
 ```
 function solution(participant, completion) {
@@ -45,8 +44,8 @@ function solution(participant, completion) {
 }
 ```
 
-4. 실패
-   - 엉망진창이 되었다. 제대로 작동하지 않았고 작동 하여도 너무 오래 걸릴 방법이다.
+4. Fail
+   - The code became messy. Did not work well and even if it did it would have taken long time to process.
 
 ```
 function solution(participant, completion) {
@@ -60,7 +59,7 @@ function solution(participant, completion) {
 }
 ```
 
-- 실패하고 결국 다른 사람들의 정답을 찾았다.
+- Found other people's solution.
 
 ```
 function solution(participant, completion) {
@@ -74,5 +73,5 @@ function solution(participant, completion) {
 }
 ```
 
-- 패인은 방법을 생각했음에도 쉽게 포기한 데 있다.
-- sort() Method는 사실 알지 못했다. 첫 알고리즘 연습부터 엉망진창이 되었지만 괜찮다. 이제 시작이다. 자바스크립트 공부를 미처 끝내지 못한 상태에서 개강이 다가오고 자바를 공부하려니 어느 하나 매듭을 짓지 못하고 있다. 초조해 지지 말고 한걸음 한걸음 나아가자.
+- The reason of this failure was that I gave up on an idea that could have worked.
+- I did not know about sort() Method. I ended up making a mess from the algorithm practice number one but it's OK. It's just a beginning. I think I am getting anxious because of my upcoming bootcamp and not having finished Vanilla JS study. Let's keep on working and not worry about things too much.
