--- a/_posts/2020-09-18-post03.md
+++ b/_posts/2020-09-18-post03.md
@@ -5,15 +5,16 @@ categories: Blog
 tags: Blog, Jekyll, minimal mistakes,
 ---
 
-### 업데이트 된 내용
-- First and second post
-- config에 이름, 이메일 주소, 깃허브 링크
-- 로컬 리포지터리에 블로그 연결
-### 다음 업데이트 할 내용
-- config  모든 정보 업데이트
-- Nav section 시작하기
+### What's updated
+- First and second post posted.
+- Added name, github link and email address on config.
+- Linked blog with the local repository
 
-### 블로그 업데이트에 참고할 문서
+### Next to be updated
+- All necessary information on the config
+- Start building the Nav section
+
+### Documents to look into when I work on the update
    https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/
    https://docs.github.com/en/github/working-with-github-pages/about-github-pages
 
