--- a/_posts/2020-09-19-post04.md
+++ b/_posts/2020-09-19-post04.md
@@ -5,7 +5,7 @@ categories: Java
 tags: Java, Study, Korean, Reserved, Keyword, Operators,
 ---
 ### 예약어란 무엇인가
-- 블라블라
+- 특정 프로그래밍 언어에서 이미 문법적인 용도로 사용되고 있기 때문에, 혹은 앞으로 업데이트를 통해 사용하기 위해 예약해둔, 식별자로 사용할 수 없는 단어들이다.
 - 블라블라
 
 ## 예약어 목록과 간단한 코멘트
@@ -28,15 +28,15 @@ tags: Java, Study, Korean, Reserved, Keyword, Operators,
 16. else - if ~ else 조건문에서 쓰인다. if / if ~ else / if ~ else if ~ else 의 경우가 있다.
 17. enum - 
 18. extends - 클래스 상속에 쓰인다. 하나의 클래스만 상속 가능하다. 반면에 implements는 인터페이스를 상속하며, 다중상속이 가능하다.
-19. false  
-20. final  
-21. finally  
-22. float  
-23. for  
+19. false - boolean 자료형의 "참", "거짓" 중 "거짓"의 값.
+20. final - 단 한번만 값이 지정될 수 있는 entity를 선언하는 경우에 사용된다. 한마디로 상수이다. 일단 한번 값이 주어지면 항상 같은 값을 유지한다. 그런데 왜? final 선언에는 static이 관습적으로 따라붙을까? 그것은 새 인스턴스 마다 메모리 공간을 할당하는 대신에 정적 선언으로 메모리 공간을 하나만 차지하게 하고 그 메모리를 공유하는 것이 더 경제적이기 때문이다.
+21. finally - try ~ catch ~ finally 문에서 쓰인다.
+22. float - 데이터 타입, 실수형. 4 byte.
+23. for - for 반복문.
 24. goto - 키워드 예약어 이지만 사용되지 않는다.
-25. if  
-26. implements  
-27. import  
+25. if - if ~ else 조건문에서 쓰인다.
+26. implements - 클래스 상속에 쓰인다. 인터페이스를 상속하며 다중상속이 가능하다. 반면 extends는 하나의 클래스만 상속한다.
+27. import - 자료형을 비교해 주는 연산자이다. "참" 혹은 "거짓" 값을 돌려준다.
 28. instanceof  
 29. int  
 30. interface  
@@ -83,3 +83,5 @@ tags: Java, Study, Korean, Reserved, Keyword, Operators,
 - https://www.tutorialspoint.com/java/java_interfaces.htm
 - https://www.w3schools.com/java/ref_keyword_import.asp
 - https://www.educative.io/edpresso/what-is-the-instanceof-operator-used-for-in-java?utm_source=Google%20AdWords&aid=5082902844932096&utm_medium=cpc&utm_campaign=kb-dynamic-edpresso&gclid=CjwKCAjw2Jb7BRBHEiwAXTR4jZxj2Kjbz6AWUwWqd8MQ3llitmgyxQfpx07_3cCzmZPhyJd01cww5RoCRnEQAvD_BwE
+- https://coding-factory.tistory.com/524
+- https://ko.wikipedia.org/wiki/%EC%98%88%EC%95%BD%EC%96%B4
