All markdown repair and post04 update

--- a/_posts/2020-09-17-post02.md
+++ b/_posts/2020-09-17-post02.md
@@ -11,16 +11,16 @@ tags: Github, Blog, Markdown, Practice
 
 - Putting number signs \# in front will make `<h1~6>`
 
-- 6 of \# will be` <h6>`
+- 6 of \# will be `<h6>`
 
 ## Emphasis
 
 - Any word wrapped in underscore(\_)
 - _Will be italic_
-- Any word wrapped in doubleunderscore(\*\*)
-- **Will be bold**
-- _You can also use \* asterisks_
-- **To make italic and bold**
+- Any word wrapped in doubleunderscore(\_\_)
+- __Will be bold__
+- You can also use \* asterisks
+- To make *italic* and **bold**
 
 ## Lists
 
@@ -42,12 +42,12 @@ tags: Github, Blog, Markdown, Practice
 
 ## Images
 
-![Github Logo](./imgs/github_PNG20.png)
+![Github Logo](/imgs/github_PNG20.png)
 
 ## Links
 
 - [GitHub](https://github.com)
-- https://github.com
+- https://github.com 	This doesn't seem to work in Jekyll.
 
 ## Blockquotes
 
