--- a/_posts/2020-09-05-post01.md
+++ b/_posts/2020-09-05-post01.md
@@ -9,9 +9,9 @@ tags: Programmers, Algorithm_level_1, JavaScript, Coding, Practice
 
    - programmers.co.kr coding test practice level 1
    - Logic
-     ![완주](/imgs/programmers_algorithm_02.png)
+     ![완주](https://github.com/372dev/372dev.github.io/blob/master/_posts/imgs/programmers_algorithm_01.JPG)
    - Given input and expected output
-     ![입출력](/imgs/programmers_algorithm_02.png)
+     ![입출력](https://github.com/372dev/372dev.github.io/blob/master/_posts/imgs/programmers_algorithm_02.JPG)
 
 2. The first solution I came up with, but I didn't consider cases of people with same name.
    - Add filter to compare the two lists
