--- a/_posts/2020-09-17-post02.md
+++ b/_posts/2020-09-17-post02.md
@@ -42,7 +42,8 @@ tags: Github, Blog, Markdown, Practice
 
 ## Images
 
-![Github Logo](/imgs/github_PNG20.png)
+![Github Logo](https://github.com/372dev/372dev.github.io/blob/master/_posts/imgs/github_PNG20.png)
+Using folder address doesn't seem to work on Jekyll. Have to use URL.
 
 ## Links
 
