--- a/_posts/2020-09-19-post04.md
+++ b/_posts/2020-09-19-post04.md
@@ -1,8 +1,8 @@
 ---
-title: "Java reserved words - Korean"
+title: "자바 예약어 - Korean"
 date: 2020-09-19 12:30:00 +0900
 categories: Java
-tags: Java, Study, Korean, Reserved, Keyword, Operators, Summary, List
+tags: Java, Study, Korean, Reserved, Keyword, Operators, Summary, List, 한국어
 ---
 
 ### 예약어란 무엇인가
