--- a/_posts/2020-10-10-post06.md
+++ b/_posts/2020-10-10-post06.md
@@ -1,7 +1,7 @@
 ---
 title: "퀵정렬을 알아보자.araboja"
 date: 2020-10-10 12:30:00 +0900
-categories: Java
+categories: Algorithm
 tags: Java, Study, Algorithm, array, sort, quick-sort, 알아보자, Korean, 한국어
 ---
 
@@ -33,13 +33,13 @@ tags: Java, Study, Algorithm, array, sort, quick-sort, 알아보자, Korean, 한
 
 5. 이 과정이 반복됩니다.  
 
-자, 자세히 보면 4번째 과정을 끝냈을 때 pivot의 위치는 제자리가 맞습니다.  
+자, 자세히 보면 4번째 과정을 끝냈을 때 pivot의 위치는 제자리가 맞습니다. 앞으로도 이 위치는 변하지 않습니다.  
 3 왼쪽의 숫자들은 모두 3보다 작고 3 오른쪽의 숫자들은 모두 3보다 큽니다.  
 앞으로 3은 그대로 두고 다른 숫자들만 정렬해주면 됩니다.  
-매력적인 점은 앞으로 제 자리를 찾은 3을 기준으로 왼쪽 오른쪽 숫자들을 각각 정렬해 주게 된다는 것인데, 이로써
+매력적인 점은 앞으로 제 자리를 찾은 3을 기준으로 왼쪽 오른쪽 숫자들을 각각 따로 정렬해 주게 된다는 것인데, 이로써
 비교 횟수가 많이 줄어들게 됩니다.
 
-#### 과정을 나열하면 아래와 같게 됩니다.
+#### 남은 정렬 과정을 나열하면 아래와 같게 됩니다.
 
 1. 우선 오른쪽 큰 조각부터 정렬 합니다.
 - 8,7,6,5
