img doesn't show

--- a/_posts/2020-11-02-post07.md
+++ b/_posts/2020-11-02-post07.md
@@ -5,8 +5,11 @@ categories: Algorithm
 tags: Java, Study, Algorithm, iteration, programmers, level_1
 ---
 ## Programmers.co.kr 코딩테스트 연습
+
 ## Level 1 - 사용언어 Java - 수박수박수박수박수박수?
-![subak1](https://github.com/372dev/372dev.github.io/blob/master/_posts/imgs/subak1.PNG)
+
+![subak1](https://github.com/372dev/372dev.github.io/blob/master/_posts/imgs/subak1.png)
+
 #### 나의 답안.. (아주 지저분 하군요!)
 ```java
 class Solution {
@@ -35,7 +38,7 @@ class Solution {
 }
 ```
 
-#### 마음에 드는 다른 답안..
+#### 잘 정리된 다른 사람의 답안..
 ```java
 class Solution {
     public String solution(int n) {
@@ -55,7 +58,7 @@ class Solution {
 }
 ```
 
-#### 의외로 굉장한 답안..
+#### 상상을 뛰어넘은 다른 사람의 답안..
 ```java
 class Solution {
     String text =
