--- a/_posts/2020-11-02-post07.md
+++ b/_posts/2020-11-02-post07.md
@@ -8,7 +8,7 @@ tags: Java, Study, Algorithm, iteration, programmers, level_1
 
 ## Level 1 - 사용언어 Java - 수박수박수박수박수박수?
 
-![subak1](https://github.com/372dev/372dev.github.io/blob/master/_posts/imgs/subak1.png)
+![subak1](https://raw.githubusercontent.com/372dev/372dev.github.io/master/_posts/imgs/subak1.PNG)
 
 #### 나의 답안.. (아주 지저분 하군요!)
 ```java
