--- a/_posts/2020-11-03-post08.md
+++ b/_posts/2020-11-03-post08.md
@@ -43,6 +43,24 @@ class Solution {
 }
 ```
 
+#### 피드백을 받아서 진화한 나의 답안
+```java
+class Solution {
+   public int solution(String s) {
+      int answer = 0;
+      char firstChar = s.charAt(0);
+      String number = Character.isDigit(firstChar) ? s : s.substring(1);
+
+      for (int i = 0; i < number.length(); i++) {
+         answer = (answer * 10) + (int) (number.charAt(i) - 48);
+      }
+
+      return answer = (firstChar == '-') ? -answer : answer;
+   }
+}
+```
+
+
 #### 잘 정리된 다른 사람의 답안..
 ```java
 public class StrToInt {
