--- a/_posts/2020-11-21-post12.md
+++ b/_posts/2020-11-21-post12.md
@@ -7,36 +7,34 @@ tags: Java, Study, DataType, Array, Whiteship
 ## Whiteship 스터디 할래
 
 ## 2주차 과제: 자바 데이터 타입, 변수 그리고 배열
-![whiteship02]()  
+![whiteship02](https://raw.githubusercontent.com/372dev/372dev.github.io/master/_posts/imgs/whiteship02.PNG)  
 -[https://github.com/whiteship/live-study/issues/2](https://github.com/whiteship/live-study/issues/2)  
 
 #### 프리미티브 타입 종류와 값의 범위 그리고 기본 값
-자바에는 여덜가지의 Java supports eight basic data types known as primitive types as described in
-Table 2-1. The primitive types include a Boolean type, a character type, four integer
-types, and two floating-point types. The four integer types and the two floatingpoint types differ in the number of bits that represent them and therefore in the
-range of numbers they can represent.
+자바에는 여덜가지의 기본자료형(Primitive data types)이 있다. 참/거짓 타입(Boolean), 문자형 타입(Character), 네개의 정수형 타입(Integer) 그리고 두개의 실수형(Floating point) 타입이 있다. 숫자를 나타내는 타입이 여섯가지가 있는데는 이유가 있는데, 정수형과 네가지, 실수형 두가지 각각 다른 데이터 크기를 사용하며 이에 따라 각 자료형에 담을 수 있는 숫자의 크기가 정해진다.  
+-Source : Java in a nut shell 7th edition by Benjamin J. Evans and David Flanagan  
 
-* 
-* 
-* 
+![whiteship02_1](https://raw.githubusercontent.com/372dev/372dev.github.io/master/_posts/imgs/whiteship02_1.PNG)  
+-Source :  
+[https://techvidvan.com/tutorials/data-types-in-java](https://techvidvan.com/tutorials/data-types-in-java)  
 
--Sources :  
-[]()  
-[]()  
+![whiteship02_2](https://raw.githubusercontent.com/372dev/372dev.github.io/master/_posts/imgs/whiteship02_2.PNG)  
+-Source :  
+[https://www.geeksforgeeks.org/data-types-in-java](https://www.geeksforgeeks.org/data-types-in-java/)  
 
-#### 프리미티브 타입과 레퍼런스 타입
-* 
-* 
-* 
+#### 프리미티브 타입과 레퍼런스 타입의 차이
+* 형태의 차이 - 여덜개의 기본자료형(Primitive types)은 자바 언어에 의해 정의되어 있고 각각의 특성을 사용자가 변경할 수 없다. 참조자료형(Reference types)은 사용자가 자유롭게 정의할 수 있다. 예를 들어 프로그램에 "Point"라는 클래스를 정의하고 두개의 Double 값을 가지게 하여 x, y 좌표를 저장하게 할 수도 있다.
+* 크기의 차이 - 기본자료형은 각각 1에서 8 바이트 사이의 크기를 갖게 되는데 이 기본자료형이 변수에 저장되어 있을 때 그 자료형의 정해진 크기만큼 메모리를 복사해 온다. 참조자료형, 에를 들어 오브젝트의 경우엔 이와 다르게 훨씬 많은 메모리를 차지할 수 있다. 오브젝트가 생성되고 힙 메모리에 유동적으로 저장되며 이 오브젝트가 사용되지 않을 때는 "가비지 콜렉터"에 의해 메모리에서 자동으로 삭제된다.
+* 비교연산자의 이용의 차이 - 기본 자료형 에서의 연산자 이용은 명료하다. == 연산자를 이용한다면 결과는 두개의 값이 같은지를 판단한다. 하지만 참조 자료형에 비교연산자를 이용한다면 결과는 두 비교 대상이 같은 오브젝트나 어레이인지를 판단한다. 쉽게 말해 참조자료형의 연산자를 이용한 비교는 메모리 위치를 비교하게 되며 이에 따라 연산자로 값을 비교할 수 없다.  
+-Source : Java in a nut shell 7th edition by Benjamin J. Evans and David Flanagan  
 
--Sources :  
-[]()  
-[]()  
+![whiteship02_3](https://raw.githubusercontent.com/372dev/372dev.github.io/master/_posts/imgs/whiteship02_3.PNG)  
+-Source :  
+[https://www.geeksforgeeks.org/data-types-in-java](https://www.geeksforgeeks.org/data-types-in-java/)
 
 #### 리터럴
-* 
-* 
-* 
+자바에서의 리터럴은 Boolean, Character, Numeric, String 그리고 Null 데이터를 나타내는 구문이다. 사용자는 리터럴을 통해 프로그램 안에서 특정 값을 표현할 수 있다. 예를 들어, in the following statement, an integer variable named count is declared and assigned an integer value. The literal 0 represents, naturally enough, the value zero.  
+-Source : Java in a nut shell 7th edition by Benjamin J. Evans and David Flanagan  
 
 -Sources :  
 []()  
