--- a/_posts/2020-11-20-post11.md
+++ b/_posts/2020-11-20-post11.md
@@ -1,5 +1,5 @@
 ---
-title: "1주차 과제: JVM은 무엇이며 자바 코드는 어떻게 실행하는 것인가."
+title: "JVM은 무엇이며 자바 코드는 어떻게 실행하는 것인가."
 date: 2020-11-20 12:30:00 +0900
 categories: Java
 tags: Java, Study, JVM, Compile, BiteCode, JDK, JRE, Whiteship
