--- a/_posts/2020-11-21-post12.md
+++ b/_posts/2020-11-21-post12.md
@@ -1,5 +1,5 @@
 ---
-title: "2주차 과제: 자바 데이터 타입, 변수 그리고 배열"
+title: "자바 데이터 타입, 변수 그리고 배열"
 date: 2020-11-21 12:30:00 +0900
 categories: Java
 tags: Java, Study, DataType, Array, Whiteship
