ORACLE_SQL_LEVEL_1

--- a/_posts/2020-11-04-post09.md
+++ b/_posts/2020-11-04-post09.md
@@ -33,7 +33,7 @@ class Solution {
 }
 ```
 
-#### 등차수열이 합 공식을 이용한 다른 사람의 답안..(수포자는 웁니다)
+#### 등차수열의 합 공식을 이용한 다른 사람의 답안..(수포자는 웁니다)
 ```java
 class Solution {
 
