--- a/_posts/2020-11-26-post15.md
+++ b/_posts/2020-11-26-post15.md
@@ -2,17 +2,116 @@
 title: "ORACLE_LEVEL_1"
 date: 2020-11-26 12:30:00 +0900
 categories: Algorithm
-tags: ORACLE, Study, SELECT, Algorithm, SUM/MAX/MIN, Programmers, Level_1, DBMS
+tags: ORACLE, Study, SELECT, Algorithm, SUM/MAX/MIN, Programmers, Level_1, DBMS,
 ---
 ## Programmers.co.kr 코딩테스트 연습
 
 ## ORACLE Level 1 모든 문제
 
-![](https://raw.githubusercontent.com/372dev/372dev.github.io/master/_posts/imgs/isPrime1.PNG)  
+![ORACLE_LEVEL1](https://raw.githubusercontent.com/372dev/372dev.github.io/master/_posts/imgs/ORACLE_LEVEL1.PNG)  
 
 #### 최댓값 구하기
-![isPrime1]()  
+![ORACLE_LEVEL1_1](https://raw.githubusercontent.com/372dev/372dev.github.io/master/_posts/imgs/ORACLE_LEVEL1_1.PNG)
 ```ORACLE
+SELECT MAX(DATETIME)
+FROM ANIMAL_INS;
+```  
+-Sources :  
+[https://programmers.co.kr/learn/courses/30/lessons/59415](https://programmers.co.kr/learn/courses/30/lessons/59415)  
 
-```
+#### 모든 레코드 조회하기
+![ORACLE_LEVEL1_2](https://raw.githubusercontent.com/372dev/372dev.github.io/master/_posts/imgs/ORACLE_LEVEL1_2.PNG)
+```ORACLE
+SELECT *
+FROM ANIMAL_INS
+ORDER BY ANIMAL_ID;
+```  
+-Sources :  
+[https://programmers.co.kr/learn/courses/30/lessons/59034](https://programmers.co.kr/learn/courses/30/lessons/59034)  
 
+#### 역순 정렬하기
+![ORACLE_LEVEL1_3](https://raw.githubusercontent.com/372dev/372dev.github.io/master/_posts/imgs/ORACLE_LEVEL1_3.PNG)
+```ORACLE
+SELECT NAME, DATETIME
+FROM ANIMAL_INS
+ORDER BY ANIMAL_ID DESC;
+```  
+-Sources :  
+[https://programmers.co.kr/learn/courses/30/lessons/59035](https://programmers.co.kr/learn/courses/30/lessons/59035)  
+
+#### 아픈 동물 찾기 - 아프지마
+![ORACLE_LEVEL1_4](https://raw.githubusercontent.com/372dev/372dev.github.io/master/_posts/imgs/ORACLE_LEVEL1_4.PNG)
+```ORACLE
+SELECT ANIMAL_ID, NAME
+FROM ANIMAL_INS
+WHERE INTAKE_CONDITION = 'Sick'
+ORDER BY ANIMAL_ID;
+```  
+-Sources :  
+[https://programmers.co.kr/learn/courses/30/lessons/59036](https://programmers.co.kr/learn/courses/30/lessons/59036)  
+
+#### 어린 동물 찾기
+![ORACLE_LEVEL1_5](https://raw.githubusercontent.com/372dev/372dev.github.io/master/_posts/imgs/ORACLE_LEVEL1_5.PNG)
+```ORACLE
+SELECT ANIMAL_ID, NAME
+FROM ANIMAL_INS
+WHERE INTAKE_CONDITION NOT IN('Aged')
+ORDER BY ANIMAL_ID;
+```  
+-Sources :  
+[https://programmers.co.kr/learn/courses/30/lessons/59037](https://programmers.co.kr/learn/courses/30/lessons/59037)  
+
+#### 동물의 아이디와 이름
+![ORACLE_LEVEL1_6](https://raw.githubusercontent.com/372dev/372dev.github.io/master/_posts/imgs/ORACLE_LEVEL1_6.PNG)
+```ORACLE
+SELECT ANIMAL_ID, NAME
+FROM ANIMAL_INS
+ORDER BY ANIMAL_ID;
+```  
+-Sources :  
+[https://programmers.co.kr/learn/courses/30/lessons/59403](https://programmers.co.kr/learn/courses/30/lessons/59403)  
+
+#### 여러 기준으로 정렬하기
+![ORACLE_LEVEL1_7](https://raw.githubusercontent.com/372dev/372dev.github.io/master/_posts/imgs/ORACLE_LEVEL1_7.PNG)
+```ORACLE
+SELECT ANIMAL_ID, NAME, DATETIME
+FROM ANIMAL_INS
+ORDER BY NAME ASC, DATETIME DESC;
+```  
+-Sources :  
+[https://programmers.co.kr/learn/courses/30/lessons/59404](https://programmers.co.kr/learn/courses/30/lessons/59404)  
+
+#### 이름이 없는 동물의 아이디
+![ORACLE_LEVEL1_8](https://raw.githubusercontent.com/372dev/372dev.github.io/master/_posts/imgs/ORACLE_LEVEL1_8.PNG)
+```ORACLE
+SELECT ANIMAL_ID
+FROM ANIMAL_INS
+WHERE NAME IS NULL
+ORDER BY ANIMAL_ID ASC;
+```  
+-Sources :  
+[https://programmers.co.kr/learn/courses/30/lessons/59039](https://programmers.co.kr/learn/courses/30/lessons/59039)  
+
+#### 이름이 있는 동물의 아이디
+![ORACLE_LEVEL1_9](https://raw.githubusercontent.com/372dev/372dev.github.io/master/_posts/imgs/ORACLE_LEVEL1_9.PNG)
+```ORACLE
+SELECT ANIMAL_ID
+FROM ANIMAL_INS
+WHERE NAME IS NOT NULL
+ORDER BY ANIMAL_ID ASC;
+```  
+-Sources :  
+[https://programmers.co.kr/learn/courses/30/lessons/59407](https://programmers.co.kr/learn/courses/30/lessons/59407)  
+
+#### 상위 N개 레코드
+![ORACLE_LEVEL1_10](https://raw.githubusercontent.com/372dev/372dev.github.io/master/_posts/imgs/ORACLE_LEVEL1_10.PNG)
+```ORACLE
+SELECT NAME
+FROM (
+    SELECT RANK() OVER(ORDER BY DATETIME ASC) "RANK", NAME
+    FROM ANIMAL_INS
+    )
+WHERE RANK = 1;
+```  
+-Sources :  
+[https://programmers.co.kr/learn/courses/30/lessons/59405](https://programmers.co.kr/learn/courses/30/lessons/59405)  
