--- a/_posts/2020-11-22-post13.md
+++ b/_posts/2020-11-22-post13.md
@@ -10,40 +10,57 @@ tags: Java, Study, DataType, Array, Whiteship
 ![whiteship03](https://raw.githubusercontent.com/372dev/372dev.github.io/master/_posts/imgs/whiteship03.PNG)  
 -[https://github.com/whiteship/live-study/issues/3](https://github.com/whiteship/live-study/issues/3)  
 
-#### 1. 대입 연산자 - (Assignment Operator)
+#### 1. 대입 연산자 (Assignment Operator)
 * = Simple assignment operator  
 
-#### 2. 산술 연산자 - (Arithmetic Operator)
+#### 2. 산술 연산자 (Arithmetic Operator)
 * \+ Additive operator (also used for String concatenation)
 * \- Subtraction operator
 * \* Multiplication operator
 * / Division operator
 * % Remainder operator  
 
-#### 3. 단항연산자 - (Unary Operators)
+#### 3. 단항연산자 (Unary Operators)
 
-##### 3_1. 양,음수의 표기
+###### 3_1. 양,음수의 표기
 * \+ Unary plus operator; indicates positive value (numbers are positive without this, however)
-* \- Unary minus operator; negates an expression
+* \- Unary minus operator; negates an expression  
 
-##### 3_2. 증감연산자 (Increment, Decrement Operators)
+###### 3_2. 증감연산자 (Increment, Decrement Operators)
 * \+\+ Increment operator; increments a value by 1
 * \-\- Decrement operator; decrements a value by 1
-* These could be Prefix or Postfix operators
+* These could be Prefix or Postfix operators  
 
-##### 3_3. 논리부정연산자 (Logical Complement Operator)
-* ! Logical complement operator; inverts the value of a boolean
+###### 3_3. 논리부정연산자 (Logical Complement Operator)
+* ! Logical complement operator; inverts the value of a boolean  
 
-#### 비트 연산자
+#### 4. 비교연산자 (Equality and Relational Operators)
+* == Equal to
+* != Not equal to
+* > Greater than
+* >= Greater than or equal to
+* < Less than
+* <= Less than or equal to  
+
+#### 5. 논리 연산자 (Conditional Operators)
+* && Conditional-AND
+* || Conditional-OR
+* ?: Ternary (shorthand for if-then-else statement)  
+
+#### 6. 비트연산자 (Bitwise and Bit Shift Operators)
+* ~ Unary bitwise complement
+* << Signed left shift
+* \>\> Signed right shift
+* \>\>\> Unsigned right shift
+* & Bitwise AND
+* ^ Bitwise exclusive OR
+* | Bitwise inclusive OR  
+
+#### 7. 3항 연산자 (Ternary Operator)
+![Ternary](https://raw.githubusercontent.com/372dev/372dev.github.io/master/_posts/imgs/Ternary.png)  
 
 
 #### 관계 연산자
-
--Sources :  
-[]()  
-[]()  
-
-#### 논리 연산자
 
 -Sources :  
 []()  
@@ -56,12 +73,6 @@ tags: Java, Study, DataType, Array, Whiteship
 []()  
 
 #### 화살표(->) 연산자
-
--Sources :  
-[]()  
-[]()  
-
-#### 3항 연산자
 
 -Sources :  
 []()  
