--- a/_posts/2020-11-22-post13.md
+++ b/_posts/2020-11-22-post13.md
@@ -2,8 +2,9 @@
 title: "연산자"
 date: 2020-11-22 12:30:00 +0900
 categories: Java
-tags: Java, Study, DataType, Array, Whiteship
+tags: Java, Study, Operators, Ternary, Whiteship
 ---
+
 ## Whiteship 스터디 할래
 
 ## 3주차 과제: 연산자
@@ -13,12 +14,16 @@ tags: Java, Study, DataType, Array, Whiteship
 #### 1. 대입 연산자 (Assignment Operator)
 * = Simple assignment operator  
 
+-Source : [https://docs.oracle.com/javase/tutorial/java/nutsandbolts/opsummary.html](https://docs.oracle.com/javase/tutorial/java/nutsandbolts/opsummary.html)  
+
 #### 2. 산술 연산자 (Arithmetic Operator)
 * \+ Additive operator (also used for String concatenation)
 * \- Subtraction operator
 * \* Multiplication operator
 * / Division operator
 * % Remainder operator  
+
+-Source : [https://docs.oracle.com/javase/tutorial/java/nutsandbolts/opsummary.html](https://docs.oracle.com/javase/tutorial/java/nutsandbolts/opsummary.html)  
 
 #### 3. 단항연산자 (Unary Operators)
 
@@ -34,55 +39,135 @@ tags: Java, Study, DataType, Array, Whiteship
 ###### 3_3. 논리부정연산자 (Logical Complement Operator)
 * ! Logical complement operator; inverts the value of a boolean  
 
-#### 4. 비교연산자 (Equality and Relational Operators)
+-3\_1 \~ 3\_3 Source : [https://docs.oracle.com/javase/tutorial/java/nutsandbolts/opsummary.html](https://docs.oracle.com/javase/tutorial/java/nutsandbolts/opsummary.html)  
+
+#### 4. 비교연산자/관계연산자 (Equality and Relational Operators)
 * == Equal to
 * != Not equal to
-* > Greater than
-* >= Greater than or equal to
-* < Less than
-* <= Less than or equal to  
+* \> Greater than
+* \>\= Greater than or equal to
+* \< Less than
+* \<\= Less than or equal to  
+
+-Source : [https://docs.oracle.com/javase/tutorial/java/nutsandbolts/opsummary.html](https://docs.oracle.com/javase/tutorial/java/nutsandbolts/opsummary.html)  
 
 #### 5. 논리 연산자 (Conditional Operators)
-* && Conditional-AND
-* || Conditional-OR
-* ?: Ternary (shorthand for if-then-else statement)  
+* \&\& Conditional-AND
+* \|\| Conditional-OR  
+
+-Source : [https://docs.oracle.com/javase/tutorial/java/nutsandbolts/opsummary.html](https://docs.oracle.com/javase/tutorial/java/nutsandbolts/opsummary.html)  
+
+###### 5_1. 3항 연산자 (Ternary Operator)
+![Ternary](https://raw.githubusercontent.com/372dev/372dev.github.io/master/_posts/imgs/Ternary.png)  
+* \?\: Ternary (shorthand for if-then-else statement)
+* 조건문의 역할을 연산자로 수행할 수 있다.
+* 3항 연산자는 C언어의 조상이라고도 할 수 있는 60년대의 CPL에서 유래했는데 현재 e1 ? e2 : e3 의 형태는 원래 e1 → e2, e3 이었다.
+* 아래 예제에서 Condition이 참일 경우 Value1이, 거짓일 경우 Value2가 Variable에 들어간다.
+  * 예제에서 Condition에는 true나 false를 갖는 boolean 형이 들어간다.
+  * 예제의 Condition이 true일 경우 Value1의 값이 Variable에 대입된다.
+  * 예제의 Condition이 false일 경우 Value2의 값이 Variable에 대입된다.
+
+```Java
+Variable = Condition ? Value1 : Value2;
+```  
+* 일반적인 이용의 예제  
+```Java
+Strng name = case.equals("uppercase") ? "JOHN" : "john";
+```  
+* Null 체크를 하는 예제  
+```Java
+String value = object != null ? object.getValue() : null;
+```  
+* Math max(), min() 함수와 같은 기능을 구현하는 예제  
+```Java
+int val1 = 10;
+int val2 = 20;
+
+int max = val1 >= val2 ? val1 : val2;
+int min = val1 <= val2 ? val1 : val2;
+```  
+* Math abs() 함수와 같은 기능을 구현하는 예제  
+```Java
+int val1 = 10;
+
+int max = val1 >= 0? val1 : -val1;
+```  
+* 중첩된 3항 연산자 예제  
+```Java
+int num = scanner.nextInt();
+String result = (num == 0) ? "0" : ((num > 0) ? "양수" : "음수");
+```  
+* 다른 연산자와 함께 활용한 예제  
+```Java
+String input;
+.
+.
+int value = (input == null || input.equals("")) ? 0 : Integer.parseInt(input);
+```  
+
+-Sources :  
+[https://en.wikipedia.org/wiki/%3F:](https://en.wikipedia.org/wiki/%3F:)  
+[http://tutorials.jenkov.com/java/ternary-operator.html#ternary-operator-condition](http://tutorials.jenkov.com/java/ternary-operator.html#ternary-operator-condition)  
 
 #### 6. 비트연산자 (Bitwise and Bit Shift Operators)
-* ~ Unary bitwise complement
-* << Signed left shift
+* \~ Unary bitwise complement
+* \<\< Signed left shift
 * \>\> Signed right shift
 * \>\>\> Unsigned right shift
-* & Bitwise AND
-* ^ Bitwise exclusive OR
-* | Bitwise inclusive OR  
+* \& Bitwise AND
+* \^ Bitwise exclusive OR
+* \| Bitwise inclusive OR  
 
-#### 7. 3항 연산자 (Ternary Operator)
-![Ternary](https://raw.githubusercontent.com/372dev/372dev.github.io/master/_posts/imgs/Ternary.png)  
-
-
-#### 관계 연산자
-
--Sources :  
-[]()  
-[]()  
-
-#### InstanceOf
-
--Sources :  
-[]()  
-[]()  
-
-#### 화살표(->) 연산자
-
--Sources :  
-[]()  
-[]()  
+-Source : [https://docs.oracle.com/javase/tutorial/java/nutsandbolts/opsummary.html](https://docs.oracle.com/javase/tutorial/java/nutsandbolts/opsummary.html)  
 
 #### 연산자의 우선순위
+![OprPr](https://raw.githubusercontent.com/372dev/372dev.github.io/master/_posts/imgs/white03_oprpr.jpg)  
+
+
+#### InstanceOf
+* 이항연산자로서 오브젝트가 주어진 타입에 속하는지 확인하는데 이용되며 true나 false의 값을 돌려준다.
+* 오브젝트를 캐스팅 하기 전에 instanceOf를 이용하여 적합한 클래스인지 확인해 두어야 한다. 그렇게 함으로서 런타임에서 발생할 수 있는 ClassCastException을 방지할 수 있다.
+* 기본 신텍스는 다음과 같다  
+```Java
+(object) instanceof (type)
+```  
+* 위의 예제에서 "object"가 "type"의 인스턴스라면, true가 리턴되고 아니라면 false가 리턴된다.
+* 다음은 자식클래스의 오브젝트가 부모클래스의 인스턴스이기도 한지를 InstanceOf를 이용하여 확인하는 예제이다.  
+```Java
+// 부모클래스
+class Animal {
+}
+
+// 자식클래스
+class Dog extends Animal {
+}
+
+class Main {
+  public static void main(String[] args) {
+
+    // 자식클래스의 오브젝트 생성
+    Dog d1 = new Dog();
+
+    // d1이 자식클래스의 인스턴스인지 확인
+    System.out.println(d1 instanceof Dog);        // true 출력
+
+    // d1이 부모클래스의 인스턴스인지 확인
+    System.out.println(d1 instanceof Animal);     // true 출력
+  }
+}
+```
+* 마찬가지로 인터페이스를 구현한 경우를 테스트 해도 똑같은 결과를 볼 수 있다.  
 
 -Sources :  
-[]()  
-[]()  
+[https://www.baeldung.com/java-instanceof](https://www.baeldung.com/java-instanceof)  
+[https://www.programiz.com/java-programming/instanceof](https://www.programiz.com/java-programming/instanceof)  
+
+#### 화살표(->) 토큰 (Arrow Token)
+자바에서 람다식(Lambda)을 지원하기 위해 자바8버전 부터 새로 지원하기 시작한 연산자이다. 이는 자바1의 출시 이후 가장 중대한 업데이트중 하나라고 할 수 있다. 코드가 간결해지며 가독성이 향상된다. 람다식 연산자(Lambda Operator) 혹은 화살표 연산자(Arrow Operator)라고도 알려져 있다. 이 화살표 연산자를 이용하여 람다식의 매개변수(Parameter)를 실행문(the body)과 구분한다.  
+아직 사용해보지 않은 기능이고 더 깊이 공부해야 할 것 같아서 람다식에 대해서는 다른 포스트를 작성한 뒤 링크를 추가하겠습니다.  
+
+-Source :  
+[https://dzone.com/articles/java-8-lambda-functions-usage-examples#](https://dzone.com/articles/java-8-lambda-functions-usage-examples#)  
 
 #### JDK 13 - Switch
 
