--- a/_posts/2020-11-30-post16.md
+++ b/_posts/2020-11-30-post16.md
@@ -7,12 +7,12 @@ tags: ORACLE, Study, SELECT, Algorithm, Programmers, Level_2, DBMS, SUM/MAX/MIN,
 
 ## Programmers.co.kr 코딩테스트 연습
 
-## ORACLE Level 1 모든 문제
+## ORACLE Level 2 모든 문제
 
 ![ORACLE_LEVEL2](https://raw.githubusercontent.com/372dev/372dev.github.io/master/_posts/imgs/ORACLE_LEVEL2.PNG)  
 
 #### 최소값 구하기
-![ORACLE_LEVEL2_1](https://raw.githubusercontent.com/372dev/372dev.github.io/master/_posts/imgs/ORACLE_LEVEL2_1.PNG)
+![ORACLE_LEVEL2_1](https://raw.githubusercontent.com/372dev/372dev.github.io/master/_posts/imgs/ORACLE_LEVEL2_1.PNG)  
 ```sql
 SELECT MIN(DATETIME)
 FROM ANIMAL_INS;
@@ -20,99 +20,108 @@ FROM ANIMAL_INS;
 -Sources :  
 [https://programmers.co.kr/learn/courses/30/lessons/59038](https://programmers.co.kr/learn/courses/30/lessons/59038)  
 
-#### 모든 레코드 조회하기
-![ORACLE_LEVEL1_2](https://raw.githubusercontent.com/372dev/372dev.github.io/master/_posts/imgs/ORACLE_LEVEL1_2.PNG)
+#### 동물 수 구하기
+![ORACLE_LEVEL2_2](https://raw.githubusercontent.com/372dev/372dev.github.io/master/_posts/imgs/ORACLE_LEVEL2_2.PNG)  
 ```sql
-SELECT *
+SELECT COUNT(*)
+FROM ANIMAL_INS;
+```  
+-Sources :  
+[https://programmers.co.kr/learn/courses/30/lessons/59406](https://programmers.co.kr/learn/courses/30/lessons/59406)  
+
+#### 고양이와 개는 몇 마리 있을까
+![ORACLE_LEVEL2_3](https://raw.githubusercontent.com/372dev/372dev.github.io/master/_posts/imgs/ORACLE_LEVEL2_3.PNG)  
+```sql
+SELECT ANIMAL_TYPE, COUNT(ANIMAL_TYPE)
+FROM ANIMAL_INS
+GROUP BY ANIMAL_TYPE
+ORDER BY ANIMAL_TYPE;
+```  
+-Sources :  
+[https://programmers.co.kr/learn/courses/30/lessons/59040](https://programmers.co.kr/learn/courses/30/lessons/59040)  
+
+#### 중복 제거하기
+![ORACLE_LEVEL2_4](https://raw.githubusercontent.com/372dev/372dev.github.io/master/_posts/imgs/ORACLE_LEVEL2_4.PNG)  
+```sql
+SELECT COUNT(DISTINCT NAME)
+FROM ANIMAL_INS;
+```  
+-Sources :  
+[https://programmers.co.kr/learn/courses/30/lessons/59408](https://programmers.co.kr/learn/courses/30/lessons/59408)  
+
+#### 동명 동물 수 찾기
+![ORACLE_LEVEL2_5](https://raw.githubusercontent.com/372dev/372dev.github.io/master/_posts/imgs/ORACLE_LEVEL2_5.PNG)  
+```sql
+SELECT NAME, COUNT(NAME)
+FROM ANIMAL_INS
+GROUP BY NAME
+HAVING COUNT(NAME) > 1
+ORDER BY NAME;
+```  
+-Sources :  
+[https://programmers.co.kr/learn/courses/30/lessons/59041](https://programmers.co.kr/learn/courses/30/lessons/59041)  
+
+#### NULL 처리하기
+![ORACLE_LEVEL2_6](https://raw.githubusercontent.com/372dev/372dev.github.io/master/_posts/imgs/ORACLE_LEVEL2_6.PNG)  
+```sql
+SELECT ANIMAL_TYPE, NVL(NAME, 'No name'), SEX_UPON_INTAKE
 FROM ANIMAL_INS
 ORDER BY ANIMAL_ID;
 ```  
 -Sources :  
-[https://programmers.co.kr/learn/courses/30/lessons/59034](https://programmers.co.kr/learn/courses/30/lessons/59034)  
+[https://programmers.co.kr/learn/courses/30/lessons/59410](https://programmers.co.kr/learn/courses/30/lessons/59410)  
 
-#### 역순 정렬하기
-![ORACLE_LEVEL1_3](https://raw.githubusercontent.com/372dev/372dev.github.io/master/_posts/imgs/ORACLE_LEVEL1_3.PNG)
-```ORACLE
-SELECT NAME, DATETIME
-FROM ANIMAL_INS
-ORDER BY ANIMAL_ID DESC;
+#### 입양 시각 구하기(1)
+![ORACLE_LEVEL2_7](https://raw.githubusercontent.com/372dev/372dev.github.io/master/_posts/imgs/ORACLE_LEVEL2_7.PNG)  
+```sql
+SELECT TO_CHAR(DATETIME, 'HH24') "HOUR", COUNT(*)
+FROM ANIMAL_OUTS
+WHERE TO_CHAR(DATETIME, 'HH24') BETWEEN 9 AND 19
+GROUP BY TO_CHAR(DATETIME, 'HH24')
+ORDER BY 1;
 ```  
 -Sources :  
-[https://programmers.co.kr/learn/courses/30/lessons/59035](https://programmers.co.kr/learn/courses/30/lessons/59035)  
+[https://programmers.co.kr/learn/courses/30/lessons/59412](https://programmers.co.kr/learn/courses/30/lessons/59412)  
 
-#### 아픈 동물 찾기 - 아프지마
-![ORACLE_LEVEL1_4](https://raw.githubusercontent.com/372dev/372dev.github.io/master/_posts/imgs/ORACLE_LEVEL1_4.PNG)
-```ORACLE
+#### 루시와 엘라 찾기
+![ORACLE_LEVEL2_8](https://raw.githubusercontent.com/372dev/372dev.github.io/master/_posts/imgs/ORACLE_LEVEL2_8.PNG)  
+```sql
+SELECT ANIMAL_ID, NAME, SEX_UPON_INTAKE
+FROM ANIMAL_INS
+WHERE NAME IN ('Lucy', 'Ella', 'Pickle', 'Rogan', 'Sabrina', 'Mitty')
+ORDER BY ANIMAL_ID;
+```  
+-Sources :  
+[https://programmers.co.kr/learn/courses/30/lessons/59046](https://programmers.co.kr/learn/courses/30/lessons/59046)  
+
+#### 이름에 el이 들어가는 동물 찾기
+![ORACLE_LEVEL2_9](https://raw.githubusercontent.com/372dev/372dev.github.io/master/_posts/imgs/ORACLE_LEVEL2_9.PNG)  
+```sql
 SELECT ANIMAL_ID, NAME
 FROM ANIMAL_INS
-WHERE INTAKE_CONDITION = 'Sick'
+WHERE (NAME LIKE 'El%' OR name like '%el%')
+AND ANIMAL_TYPE = 'Dog'
+ORDER BY NAME;
+```  
+-Sources :  
+[https://programmers.co.kr/learn/courses/30/lessons/59047](https://programmers.co.kr/learn/courses/30/lessons/59047)  
+
+#### 중성화 여부 파악하기
+![ORACLE_LEVEL2_10](https://raw.githubusercontent.com/372dev/372dev.github.io/master/_posts/imgs/ORACLE_LEVEL2_10.PNG)  
+```sql
+SELECT ANIMAL_ID, NAME, DECODE(SUBSTR(SEX_UPON_INTAKE, 1, 3), 'Neu', 'O', 'Spa', 'O', 'Int', 'X') "중성화"
+FROM ANIMAL_INS
+order by animal_id;
+```  
+-Sources :  
+[https://programmers.co.kr/learn/courses/30/lessons/59409](https://programmers.co.kr/learn/courses/30/lessons/59409)  
+
+#### DATETIME에서 DATE로 형 변환
+![ORACLE_LEVEL2_11](https://raw.githubusercontent.com/372dev/372dev.github.io/master/_posts/imgs/ORACLE_LEVEL2_11.PNG)  
+```sql
+SELECT ANIMAL_ID, NAME, TO_CHAR(DATETIME, 'YYYY-MM-DD')
+FROM ANIMAL_INS
 ORDER BY ANIMAL_ID;
 ```  
 -Sources :  
-[https://programmers.co.kr/learn/courses/30/lessons/59036](https://programmers.co.kr/learn/courses/30/lessons/59036)  
-
-#### 어린 동물 찾기
-![ORACLE_LEVEL1_5](https://raw.githubusercontent.com/372dev/372dev.github.io/master/_posts/imgs/ORACLE_LEVEL1_5.PNG)
-```ORACLE
-SELECT ANIMAL_ID, NAME
-FROM ANIMAL_INS
-WHERE INTAKE_CONDITION NOT IN('Aged')
-ORDER BY ANIMAL_ID;
-```  
--Sources :  
-[https://programmers.co.kr/learn/courses/30/lessons/59037](https://programmers.co.kr/learn/courses/30/lessons/59037)  
-
-#### 동물의 아이디와 이름
-![ORACLE_LEVEL1_6](https://raw.githubusercontent.com/372dev/372dev.github.io/master/_posts/imgs/ORACLE_LEVEL1_6.PNG)
-```ORACLE
-SELECT ANIMAL_ID, NAME
-FROM ANIMAL_INS
-ORDER BY ANIMAL_ID;
-```  
--Sources :  
-[https://programmers.co.kr/learn/courses/30/lessons/59403](https://programmers.co.kr/learn/courses/30/lessons/59403)  
-
-#### 여러 기준으로 정렬하기
-![ORACLE_LEVEL1_7](https://raw.githubusercontent.com/372dev/372dev.github.io/master/_posts/imgs/ORACLE_LEVEL1_7.PNG)
-```ORACLE
-SELECT ANIMAL_ID, NAME, DATETIME
-FROM ANIMAL_INS
-ORDER BY NAME ASC, DATETIME DESC;
-```  
--Sources :  
-[https://programmers.co.kr/learn/courses/30/lessons/59404](https://programmers.co.kr/learn/courses/30/lessons/59404)  
-
-#### 이름이 없는 동물의 아이디
-![ORACLE_LEVEL1_8](https://raw.githubusercontent.com/372dev/372dev.github.io/master/_posts/imgs/ORACLE_LEVEL1_8.PNG)
-```ORACLE
-SELECT ANIMAL_ID
-FROM ANIMAL_INS
-WHERE NAME IS NULL
-ORDER BY ANIMAL_ID ASC;
-```  
--Sources :  
-[https://programmers.co.kr/learn/courses/30/lessons/59039](https://programmers.co.kr/learn/courses/30/lessons/59039)  
-
-#### 이름이 있는 동물의 아이디
-![ORACLE_LEVEL1_9](https://raw.githubusercontent.com/372dev/372dev.github.io/master/_posts/imgs/ORACLE_LEVEL1_9.PNG)
-```ORACLE
-SELECT ANIMAL_ID
-FROM ANIMAL_INS
-WHERE NAME IS NOT NULL
-ORDER BY ANIMAL_ID ASC;
-```  
--Sources :  
-[https://programmers.co.kr/learn/courses/30/lessons/59407](https://programmers.co.kr/learn/courses/30/lessons/59407)  
-
-#### 상위 N개 레코드
-![ORACLE_LEVEL1_10](https://raw.githubusercontent.com/372dev/372dev.github.io/master/_posts/imgs/ORACLE_LEVEL1_10.PNG)
-```ORACLE
-SELECT NAME
-FROM (
-    SELECT RANK() OVER(ORDER BY DATETIME ASC) "RANK", NAME
-    FROM ANIMAL_INS
-    )
-WHERE RANK = 1;
-```  
--Sources :  
-[https://programmers.co.kr/learn/courses/30/lessons/59405](https://programmers.co.kr/learn/courses/30/lessons/59405)  
+[https://programmers.co.kr/learn/courses/30/lessons/59414](https://programmers.co.kr/learn/courses/30/lessons/59414)  
