--- a/_posts/2020-12-01-post17.md
+++ b/_posts/2020-12-01-post17.md
@@ -15,9 +15,11 @@ tags: Java, Study, Control, Conditions, Iteration, Whiteship
 #### 1. 조건문/선택문 (Control flow)  
 
 ##### 1.1. 조건문(if / if...else statement)  
+
 우리는 살아가며 종종 상황을 보고 그 상황에 맞게 결정을 내려야 할 때가 있습니다. 예를 들어, 비가 오고 있다면 우산을 챙겨야 하고 하늘이 맑다면 우산을 챙기지 않습니다. 같은 판단의 과정을 통해 어떤 정수가 2로 나눠진다면 우린 그 숫자가 짝수라고 할 수 있고 2로 나눠지지 않는다면 홀수라고 결론지을 수 있습니다.  
 
 ###### 1.1.1. if statement  
+
 다시 우산의 예를 들어봅시다.  
 
 * 비가 오는지를 보고 우산을 가져갈지 판단하는 내용으로 조건문의 기본 신텍스를 표현하면 다음과 같습니다.  
@@ -56,6 +58,7 @@ public void method1() {
 ```  
 
 ###### 1.1.2. if...else statement  
+
 위에서 if 구문이 조건의 결과 참/거짓에 따라 참일 경우에 코드블럭을 실행하는 것을 확인했습니다. 여기에 else를 덧붙이면 if 구문의 조건 결과가 거짓일 경우에 실행할 코드블럭을 추가할 수 있습니다.  
 
 * 집에 들어오기 전에 우산을 사용했는지 여부에 따라 우산을 말릴지 아니면 그냥 넣어둘지 판단하는 내용으로 조건문의 기본 신텍스를 표현하면 다음과 같습니다.  
@@ -99,6 +102,7 @@ public void method1() {
 ```  
 
 ###### 1.1.3. if...else if...else statement  
+
 먼저 살펴본 if...else 구문을 중첩해서 사용할 수 있습니다.  
 
 * 귀찮지 않다면 펼쳐둔 우산이 다 말랐는지 확인하고 우산을 접을지 아니면 더 말릴지 판단하는 내용으로 조건문의 기본 신텍스를 표현하면 다음과 같습니다.  
@@ -131,6 +135,7 @@ if(temperature <= 0) {
 ```  
 
 ##### 1.2. 선택문(switch statement)
+
 앞서 살펴본 조건문의 경우, 한가지 조건의 참/거짓 여부에 따라 실행할 코드블럭을 각각 작성합니다. 하지만 우리가 살아가며 둘중 하나의 조건만 주어지는게 아니라 여러가지 선택이 주어질 때가 있습니다. if...else 구문을 중첩시켜서 다중 구문으로 이를 표현할 수 있겠지만 그보다 더 효율적일 수 있는 방법으로 선택문이 있습니다.  
 
 * 주어진 달에 따라 계절을 알려주는 내용으로 선택문의 기본 신텍스를 표현하면 다음과 같습니다.  
@@ -188,6 +193,10 @@ switch(num) {
 [https://devqa.io/java-if-else-switch-statements/](https://devqa.io/java-if-else-switch-statements/)  
 
 #### 2. 반복문 (Iteration)
+
+루프(loop)라고 불리우는 반복문들은 어느 프로그래밍 언어에서나 기능을 반복적으로 수행하기 위해 사용됩니다. 자바에는 세가지 종류의 루프가 있는데 먼저 표를 보며 이 세가지를 비교해보고 시작하겠습니다.  
+
+
 
 ##### 2.1. for statement
 
