whiteship study_iteration
Started working on the iteration part

--- a/_posts/2020-12-01-post17.md
+++ b/_posts/2020-12-01-post17.md
@@ -196,13 +196,116 @@ switch(num) {
 
 루프(loop)라고 불리우는 반복문들은 어느 프로그래밍 언어에서나 기능을 반복적으로 수행하기 위해 사용됩니다. 자바에는 세가지 종류의 루프가 있는데 먼저 표를 보며 이 세가지를 비교해보고 시작하겠습니다.  
 
+##### 2.1. while statement
+While 구문은 자바의 가장 기본적인 반복문이다, 기본적인 신택스는 다음과 같다.  
 
+>while (조건) {  
+>  실행할 구문  
+>}  
+  
+While 구문은 실행시, 먼저 조건을 확인하며 이 조건에는 Boolean 변수나 Boolean 값(true/false)이 들어가야 한다. 값이 거짓이라면, 인터프리터는 뒤따르는 실행 구문을 건너뛰고 다음 코드를 읽는다. 한편 값이 참인 경우, 인터프리터는 뒤따르는 실행 구문을 실행하고 난 뒤 Boolean 값을 다시 한번 확인한다. 재확인된 값이 거짓이라면 실행 구문을 건너뛰고 참이라면 실행 구문을 다시 한번 더 실행하며 이와 같은 순환이 계속해서 반복된다. 언제까지? 조건의 값이 true인 경우 계속(false가 된 경우 멈춘다). 반복이 모두 끝나야만 인터프리터는 다음으로 넘어간다.  
 
-##### 2.1. for statement
+다음 신택스를 이용해서 무한반복 구문을 만들 수 있다.  
 
+>while(true)  
 
-##### 2.2. while statement
+다음은 While 구문으로 0부터 9까지 모든 숫자를 실행하는 예문이다.  
 
+```java
+int count = 0;
+while (count < 10) {
+ System.out.println(count);
+ count++;
+}
+```  
 
-##### 2.3. do...while statement
+As you can see, the variable count starts off at 0 in this example and is incremented
+each time the body of the loop runs. Once the loop has executed 10 times, the
+expression becomes false (i.e., count is no longer less than 10), the while state‐
+ment finishes, and the Java interpreter can move to the next statement in the pro‐
+gram. Most loops have a counter variable like count. The variable names i, j, and k
+are commonly used as loop counters, although you should use more descriptive
+names if it makes your code easier to understand.
 
+##### 2.2. do...while statement
+
+A do loop is much like a while loop, except that the loop expression is tested at the
+bottom of the loop rather than at the top. This means that the body of the loop is
+always executed at least once. The syntax is:
+do
+ statement
+while (expression);
+Notice a couple of differences between the do loop and the more ordinary while
+loop. First, the do loop requires both the do keyword to mark the beginning of the
+loop and the while keyword to mark the end and introduce the loop condition.
+Also, unlike the while loop, the do loop is terminated with a semicolon. This is
+because the do loop ends with the loop condition rather than simply ending with a
+curly brace that marks the end of the loop body. The following do loop prints the
+same output as the while loop just discussed:
+int count = 0;
+do {
+ System.out.println(count);
+ count++;
+} while(count < 10);
+The do loop is much less commonly used than its while cousin because, in practice,
+it is unusual to encounter a situation where you are sure you always want a loop to
+execute at least once.
+
+##### 2.3. for statement
+
+The for statement provides a looping construct that is often more convenient than
+the while and do loops. The for statement takes advantage of a common looping
+Java Syntax
+Statements | 59
+pattern. Most loops have a counter, or state variable of some kind, that is initialized
+before the loop starts, tested to determine whether to execute the loop body, and
+then incremented or updated somehow at the end of the loop body before the test
+expression is evaluated again. The initialize, test, and update steps are the three
+crucial manipulations of a loop variable, and the for statement makes these three
+steps an explicit part of the loop syntax:
+for(initialize; test; update) {
+ statement
+}
+This for loop is basically equivalent to the following while loop:
+initialize;
+while (test) {
+ statement;
+ update;
+}
+Placing the initialize, test, and update expressions at the top of a for loop
+makes it especially easy to understand what the loop is doing, and it prevents mis‐
+takes such as forgetting to initialize or update the loop variable. The interpreter dis‐
+cards the values of the initialize and update expressions, so to be useful, these
+expressions must have side effects. initialize is typically an assignment expres‐
+sion, while update is usually an increment, decrement, or some other assignment.
+The following for loop prints the numbers 0 to 9, just as the previous while and do
+loops have done:
+int count;
+for(count = 0 ; count < 10 ; count++)
+ System.out.println(count);
+Notice how this syntax places all the important information about the loop variable
+on a single line, making it very clear how the loop executes. Placing the update
+expression in the for statement itself also simplifies the body of the loop to a single
+statement; we don’t even need to use curly braces to produce a statement block.
+The for loop supports some additional syntax that makes it even more convenient
+to use. Because many loops use their loop variables only within the loop, the for
+loop allows the initialize expression to be a full variable declaration, so that the
+variable is scoped to the body of the loop and is not visible outside of it. For
+example:
+for(int count = 0 ; count < 10 ; count++)
+ System.out.println(count);
+Furthermore, the for loop syntax does not restrict you to writing loops that use
+only a single variable. Both the initialize and update expressions of a for loop
+60 | Chapter 2: Java Syntax from the Ground Up
+can use a comma to separate multiple initializations and update expressions. For
+example:
+for(int i = 0, j = 10 ; i < 10 ; i++, j--)
+ sum += i * j;
+Even though all the examples so far have counted numbers, for loops are not
+restricted to loops that count numbers. For example, you might use a for loop to
+iterate through the elements of a linked list:
+for(Node n = listHead; n != null; n = n.nextNode())
+ process(n);
+The initialize, test, and update expressions of a for loop are all optional; only
+the semicolons that separate the expressions are required. If the test expression is
+omitted, it is assumed to be true. Thus, you can write an infinite loop as for(;;).
