--- a/_posts/2020-12-01-post17.md
+++ b/_posts/2020-12-01-post17.md
@@ -196,8 +196,10 @@ switch(num) {
 
 루프(loop)라고 불리우는 반복문들은 어느 프로그래밍 언어에서나 기능을 반복적으로 수행하기 위해 사용됩니다. 자바에는 세가지 종류의 루프가 있는데 먼저 표를 보며 이 세가지를 비교해보고 시작하겠습니다.  
 
+![whiteship04_7](https://raw.githubusercontent.com/372dev/372dev.github.io/master/_posts/imgs/whiteship04_7.PNG)  
+
 ##### 2.1. while statement
-While 구문은 자바의 가장 기본적인 반복문이다, 기본적인 신택스는 다음과 같다.  
+While 구문은 자바의 가장 기본적인 반복문이다. 기본적인 신택스는 다음과 같다.  
 
 >while (조건) {  
 >  실행할 구문  
@@ -229,12 +231,12 @@ names if it makes your code easier to understand.
 
 ##### 2.2. do...while statement
 
-A do loop is much like a while loop, except that the loop expression is tested at the
-bottom of the loop rather than at the top. This means that the body of the loop is
-always executed at least once. The syntax is:
-do
- statement
-while (expression);
+do...while 구문은 while 구문과 비슷하다. 다만, 조건의 확인이 반복문 실행 후에 이루어진다는 차이가 있다. 때문에 조건의 확인 이전에 무조건 한번은 구문을 실행하게 된다. 신택스는 다음과 같다.
+
+>do {  
+>  실행할 구문  
+>} while (조건);  
+
 Notice a couple of differences between the do loop and the more ordinary while
 loop. First, the do loop requires both the do keyword to mark the beginning of the
 loop and the while keyword to mark the end and introduce the loop condition.
@@ -253,19 +255,12 @@ execute at least once.
 
 ##### 2.3. for statement
 
-The for statement provides a looping construct that is often more convenient than
-the while and do loops. The for statement takes advantage of a common looping
-Java Syntax
-Statements | 59
-pattern. Most loops have a counter, or state variable of some kind, that is initialized
-before the loop starts, tested to determine whether to execute the loop body, and
-then incremented or updated somehow at the end of the loop body before the test
-expression is evaluated again. The initialize, test, and update steps are the three
-crucial manipulations of a loop variable, and the for statement makes these three
-steps an explicit part of the loop syntax:
-for(initialize; test; update) {
- statement
-}
+for 구문은 while 구문이나 do while 구문보다 사용하기 편리한 면이 있다. for 구문은 일반적이고 자주 사용되는 반복 구조를 활용한다. 반복이 실행되기 전에 먼저 카운터의 역할을 할 변수가 지정되고, 이 카운터의 크기가 조건에 부합하는지 확인한 이후에
+코드가 실행되고, 마지막에 카운터의 크기가 주어진 규칙에 따라 증감된다. 카운터의 초기화, 조건 확인, 증감식 까지 이 세가지가 for 구문의 핵심 요소이다. 이 세 요소가 반복문의 조건을 명확하게 표현하게 된다.
+
+>for(initialize; test; update) {
+> statement
+>}
 This for loop is basically equivalent to the following while loop:
 initialize;
 while (test) {
